WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179639
We need to set topCallFrame when calling Wasm::Memory::grow from the JIT
https://bugs.webkit.org/show_bug.cgi?id=179639
Summary
We need to set topCallFrame when calling Wasm::Memory::grow from the JIT
Saam Barati
Reported
2017-11-13 15:21:11 PST
...
Attachments
patch
(16.46 KB, patch)
2017-11-13 16:40 PST
,
Saam Barati
jfbastien
: review+
Details
Formatted Diff
Diff
patch for landing
(16.38 KB, patch)
2017-11-13 16:54 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch for landing
(16.37 KB, patch)
2017-11-13 16:55 PST
,
Saam Barati
buildbot
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(16.48 KB, patch)
2017-11-13 20:51 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2017-11-13 15:22:10 PST
<
rdar://problem/35513018
>
Saam Barati
Comment 2
2017-11-13 16:40:23 PST
Created
attachment 326822
[details]
patch
Build Bot
Comment 3
2017-11-13 16:42:31 PST
Attachment 326822
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/wasm/WasmInstance.h:47: The parameter name "context" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/wasm/WasmInstance.h:47: The parameter name "module" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/wasm/WasmInstance.h:47: The parameter name "storeTopCallFrame" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/wasm/WasmInstance.h:115: The parameter name "context" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 4 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
JF Bastien
Comment 4
2017-11-13 16:49:15 PST
Comment on
attachment 326822
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=326822&action=review
r=me
> Source/JavaScriptCore/wasm/WasmInstance.cpp:56 > +Ref<Instance> Instance::create(Context* context, Ref<Module>&& module, EntryFrame** topEntryFramePointer, StoreTopCallFrameCallback storeTopCallFrame)
Make it && here too, and WTFMove below.
> Source/JavaScriptCore/wasm/WasmInstance.h:47 > + static Ref<Instance> create(Context* context, Ref<Module>&& module, EntryFrame** topEntryFramePointer, StoreTopCallFrameCallback storeTopCallFrame = nullptr);
&& here too. Why nullptr? Seems nicer to force passing a no-op function when appropriate, otherwise it's not obvious that you're opting out.
> Source/JavaScriptCore/wasm/WasmInstance.h:110 > + if (m_storeTopCallFrame)
I'd make this never nullptr.
> Source/JavaScriptCore/wasm/WasmInstance.h:131 > + WTF::Function<void(void*)> m_storeTopCallFrame;
StoreTopCallFrameCallback from above.
Saam Barati
Comment 5
2017-11-13 16:54:49 PST
Created
attachment 326825
[details]
patch for landing With comments addressed.
Saam Barati
Comment 6
2017-11-13 16:55:40 PST
Created
attachment 326826
[details]
patch for landing Fix reviewed by OOPS.
Build Bot
Comment 7
2017-11-13 16:57:20 PST
Attachment 326826
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/wasm/WasmInstance.h:114: The parameter name "context" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 8
2017-11-13 17:41:43 PST
Looks like my test is taking too long on slow memory mode. Weird.
Build Bot
Comment 9
2017-11-13 17:52:16 PST
Comment on
attachment 326826
[details]
patch for landing
Attachment 326826
[details]
did not pass jsc-ews (mac): Output:
http://webkit-queues.webkit.org/results/5219743
New failing tests: wasm.yaml/wasm/function-tests/grow-memory-cause-gc.js.wasm-slow-memory
Saam Barati
Comment 10
2017-11-13 20:51:12 PST
Created
attachment 326848
[details]
patch for landing
WebKit Commit Bot
Comment 11
2017-11-14 01:05:36 PST
Comment on
attachment 326848
[details]
patch for landing Clearing flags on attachment: 326848 Committed
r224810
: <
https://trac.webkit.org/changeset/224810
>
WebKit Commit Bot
Comment 12
2017-11-14 01:05:38 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug